<resources>
    <string name="app_name">MyCalendar</string>

    <string name="search_icon_description">일정 검색</string>
    <string name="add_schedule_button">일정 추가 버튼</string>
    <string name="add_schedule">일정 추가</string>

    <string name="schedule_hint">일정 추가</string>
    <string name="add_schedule_title">일정 추가</string>
    <string name="save">저장</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="back">뒤로가기</string>
    <string name="timeline_description">시간별 일정 타임라인</string>

    <string name="day_sun">일</string>
    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wed">수</string>
    <string name="day_thu">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>

    <string name="navigation_drawer_open">메뉴 열기</string>
    <string name="navigation_drawer_close">메뉴 닫기</string>
    <string name="title">제목</string>
    <string name="set_time">시간 설정</string>
    <string name="color">색상</string>
    <string name="color_red">빨강</string>
    <string name="color_blue">파랑</string>
    <string name="color_green">초록</string>
    <string name="set_alarm">알림 설정</string>
    <string name="memo">메모</string>
    <string name="confirmed">확정</string>
    <string name="postponed">연기</string>
    <string name="close_button_description">닫기 버튼</string>

</resources>